# mdmak

./: .gitignore  README.md  pyproject.toml
src/mdmak/: __init__.py
src/mdmak/template/: github_style.html
